--- a/行政-內政/著作權法.md
+++ b/行政-內政/著作權法.md
@@ -1,114 +1,238 @@
 * 1 為保障著作人著作權益，調和社會公共利益，促進國家文化發展，特制定本法。本法未規定者，適用其他法律之規定。
 
-* 2 本法主管機關為內政部。
+* 2 本法所稱主管機關為內政部。內政部得設著作權局，執行著作權行政事務；其組織，另以法律定之。
 
-* 3 本法用詞定義如左：一、著作：指屬於文學、科學、藝術或其他學術範圍之創作。二、著作權：指因著作完成而發生第四條所定之權利。三、著作人：指創作著作之人。四、著作權人：指著作人或依法取得著作權之人。五、著作有關之權利人：指出版人、發行人、製版人或其他得就著作依法主張權利之人。六、文字著述：指以文字、數字或符號產生之著作。七、語言著述：指專以口述產生之著作。八、文字著述之翻譯：指從一種文字之著述，以他種文字或符號翻譯成之著作。但文字語體之變換不屬之。九、語言著述之翻譯：指從一種語言著述，以他種語言翻譯成之著作。十、編輯著作：指利用二種以上之文字、語言著述或其翻譯，經整理、增刪、組合或編排產生整體創意之新著作。但不得侵害各該著作之著作權。十一、美術著作：指著作人以智巧、匠技、描繪或表現之繪畫、建築圖、雕塑、書法或其他具有美感之著作。但有標示作用，或涉及本體形貌以外意義，或係表達物體結構、實用物品形狀、文字字體、色彩及布局、構想、觀念之設計不屬之。十二、圖形著作：指卡通、漫畫、連環圖、動作分解圖及其他不屬美術、地圖、科技或工程設計圖形之單張圖或其圖集之著作。前款但書準用之。十三、音樂著作：指作曲或具有創意之音樂改作著作。但為適合樂器演奏所為之改作而非旋律之創作不屬之。十四、錄音著作：指聲音首次直接附著於媒介物所成之著作。十五、電影著作：指有系統之聲音、影像首次直接附著於電影用媒介物之著作。十六、錄影著作：指有系統之聲音、影像首次直接附著於錄影用媒介物之著作。十七、攝影著作：指藉科技器械就實體物拍攝所成之著作。但就他人之攝影為再拍攝者不屬之。十八、演講、演奏、演藝、舞蹈著作：指以聲音或動作之現場表演。十九、電腦程式著作：指直接或間接使電腦產生一定結果為目的所組成之指令。二十、地圖著作：指表示地理事項之平面圖或立體圖及其圖集。二十一、科技或工程設計圖形著作：指器械結構或分解圖、電路圖或其他科技或工程設計圖形及其圖集著作，附有說明文字者亦同。但製造、操作、營造之手冊或說明書不屬之。二十二、製版權：指無著作權或著作權期間屆滿之著作，經製版人整理、排印或就原件影印發行而產生之權利。二十三、重製權：指不變更著作形態而再現其內容之權。如為圖形著作，就平面或立體轉變成立體或平面者，視同重製。二十四、編輯權：指著作人就其本人著作，享有整理、增刪、組合或編排產生著作之權。二十五、翻譯權：指著作人就其本人著作，享有以他種文字、符號、語言翻譯產生著作之權。二十六、出租權：指著作原件或其重製物為營利而出租之權。二十七、改作權：指變更原著作之表現形態使其內容再現之權。二十八、公開口述權：指將著作內容口述於公眾之權。二十九、公開播送權：指用有線電或無線電或其他方法將著作內容以影像或聲音播送於現場以外公眾之權。三十、公開上映權：指用單一或多數視聽機、其他機械裝置或其他方法，將著作內容以影像再現於現場或現場以外一定場所公眾之權。三十一、公開演奏權：指用樂器或其他方法將著作內容以聲音再現於現場公眾之權。三十二、公開展示權：指將著作原件或其複製物展示於公眾之權。前項第三十款所稱之現場或現場以外一定場所，指電影院、俱樂部、錄影帶或碟影片播映場所、旅館房間、供公眾使用之交通工具或其他供不特定人進出之場所。
+* 3 本法用詞定義如左：一、著作：指屬於文學、科學、藝術或其他學術範圍之創作。二、著作人：指創作著作之人。三、著作權：指因著作完成所生之著作人格權及著作財產權。四、公眾：指不特定人或特定之多數人。在家庭及其家居生活以外聚集多數人之場所之人，亦屬之。五、重製：指以印刷、複印、錄音、錄影、攝影、筆錄或其他方法有形之重複製作。於劇本、音樂著作或其他類似著作演出或播送時予以錄音或錄影；或依建築設計圖或建築模型建造建築物者，亦屬之。六、公開口述：指以言詞或其他方法向公眾傳達著作內容。七、公開播送：指基於公眾接收訊息為目的，以有線電、無線電或其他器材，藉聲音或影像向公眾傳達著作內容。八、公開上映：指以單一或多數視聽機或其他傳送影像之方法向現場或現場以外一定場所之公眾傳達著作內容。九、公開演出：指以演技、舞蹈、歌唱、彈奏樂器或其他方法向現場之公眾傳達著作內容。十、公開展示：指向公眾展示著作原件。十一、改作：指以翻譯、編曲、改寫、拍攝影片或其他方法就原著作另為創作。十二、散布：指不問有償或無償，將著作之原件或重製物提供公眾交易或流通。十三、發行：指權利人重製並散布能滿足公眾合理需要之重製物。十四、公開發表：指權利人以發行、播送、上映、口述、演出、展示或其他方法向公眾公開提示著作內容。前項第八款所稱之現場或現場以外一定場所，包含電影院、俱樂部、錄影帶或碟影片播映場所、旅館房間、供公眾使用之交通工具或其他供不特定人進出之場所。
 
-> 釋：一、鑑於近年來科技進步，著作利用型態增加，現行條文「公開上映權」之定義，已不能適應科技社會之狀況；再者，由於國家經濟繁榮，社會型態變遷迅速，人民對休閒娛樂活動需求殷切，因此以播映電影著作或錄影著作供人觀賞之利用著作之活動不斷增加，此種行為是否構成公開上映，侵害著作權人之公開上映權，亦迭有爭議。二、綜上理由，故對「公開上映權」之定義加以修正，明定公開上映權所包涵之方法、處所，以杜爭議。
+* 4 外國人之著作合於左列情形之一者，得依本法享有著作權。但條約或協定另有約定，經立法院議決通過者，從其約定。一、於中華民國管轄區域內首次發行，或於中華民國管轄區域外首次發行後三十日內在中華民國管轄區域內發行者。但以該外國人之本國，對中華民國人之著作，在相同之情形下，亦予保護且經查證屬實者為限。二、依條約、協定或其本國法令、慣例，中華民國人之著作得在該國享有著作權者。
 
-* 4 左列著作，除本法另有規定外，其著作人於著作完成時享有著作權：一、文字著述。二、語言著述。三、文字著述之翻譯。四、語言著述之翻譯。五、編輯著述。六、美術著作。七、圖形著作。八、音樂著作。九、電影著作。十、錄音著作。十一、錄影著作。十二、攝影著作。十三、演講、演奏、演藝、舞蹈著作。十四、電腦程式著作。十五、地圖著作。十六、科技或工程設計圖形著作。十七、其他著作。前項著作之著作權人，依著作性質，除得專有重製、公開口述、公開播送、公開上映、公開演奏、公開展示、編輯、翻譯、出租等權利外，並得專有改作之權。
+* 5 本法所稱著作，例示如左：一、語文著作。二、音樂著作。三、戲劇、舞蹈著作。四、美術著作。五、攝影著作。六、圖形著作。七、視聽著作。八、錄音著作。九、建築著作。十、電腦程式著作。前項各款著作例示內容，由主管機關定之。
 
-* 5 左列各款不得為著作權之標的：一、憲法、法令及公文書。二、標語及通用之符號、名詞、公式、數表、表格、簿冊、時曆。三、單純傳達事實之新聞報導。四、各類考試試題。
+* 6 就原著作改作之創作為衍生著作，以獨立之著作保護之。衍生著作之保護，對原著作之著作權不生影響。
 
-* 6 第四條第一項所定之著作，得申請著作權註冊。但有左列情事之一者，不適用之：一、不合法本法規定者。二、依法應受審查而未經該管機關審查核准者。三、經依法禁止出售或散布者。著作權經註冊者，應發給執照。著作權經註冊後，發現有第一項情事之一者，應撤銷其註冊。
+* 7 就資料之選擇及編排具有創作性者為編輯著作，以獨立之著作保護之。編輯著作之保護，對其所收編著作之著作權不生影響。
 
-* 7 著作權得全部或部分轉讓他人或與他人共有。著作權讓與之範圍，依雙方約定；其約定不明者，推定由讓與人享有。
+* 8 二人以上共同完成之著作，其各人之創作，不能分離利用者，為共同著作。
 
-* 8 著作權歸著作人終身享有。但本法另有規定者，不在此限。
+* 9 左列各款不得為著作權之標的：一、憲法、法律、命令或公文。二、中央或地方機關就前款著作作成之翻譯物或編輯物。三、標語及通用之符號、名詞、公式、數表、表格、簿冊或時曆。四、單純為傳達事實之新聞報導所作成之語文著作。五、依法令舉行之各類考試試題。
 
-* 9 數人合作之著作，其著作權歸各著作人共同依前條規定享有，著作人中有死亡者，由其繼承人繼續享有其應有之權利。前項繼承人得繼續享有其權利，至著作人中最後死亡者死亡後三十年。
+* 10 在著作之原件或其已發行之重製物上，或將著作公開發表時，以通常之方法表示著作人之本名或眾所周知之別名者，推定為該著作之著作人。前項規定，於著作發行日期、地點之推定，準用之。
 
-* 10 出資聘人完成之著作，其著作權歸出資人享有之。但當事人間另有約定者，從其約定。
+* 11 法人之受雇人，在法人之企劃下，完成其職務上之著作，以該受雇人為著作人。但契約約定以法人或其代表人為著作人者，從其約定。
 
-* 11 著作權自始依法歸機關、學校、公司或其他法人或團體享有者，其期間為三十年。
+* 12 受聘人在出資人之企劃下完成之著作，除前條情形外，以該受聘人為著作人。但契約約定以出資人或其代表人為著作人者，從其約定。
 
-* 12 編輯、電影、錄音、錄影、攝影及電腦程式著作，其著作權期間為三十年。刊入或附屬於著作之電影、錄音、錄影、攝影，為該著作而作者，其著作權歸該著作之著作權人享有。在該著作之著作權期間未屆滿前，繼續存在。
+* 13 著作人於著作完成時享有著作權。
 
-* 13 文字著述之翻譯，其著作權期間為三十年。但不得限制他人就原著另譯。語言著作以文字翻譯者亦同。翻譯本國人之著作，應取得原著之著作權人同意。文字著述之翻譯，除原著與譯著之著作權屬於同一人或經原著之著作權人同意者外，不得以譯文與原文並列。原著中之一般附圖、圖例及攝影，為闡釋原著所必須者，得轉載於翻譯著作中，但圖片及其有關之文字說明，除通用之符號、名詞外，均應翻譯。
+* 14 第十條第一項規定，於著作財產權人之推定，準用之。
 
-* 14 終身享有之著作權，經轉讓或繼承者，由受讓人或繼承人自受讓或繼承之日起，繼續享有三十年。非終身享有之著作權，經轉讓或繼承者，由受讓人或繼承人繼續享足其賸餘之期間。合著之共同著作人，其部分著作權轉讓與合著人者，受讓部分之著作權期間與其自著部分應享之期間同。
+* 15 著作人就其著作享有公開發表之權利。有左列情形之一者，推定著作人同意公開發表其著作：一、著作人將其尚未公開發表著作之著作財產權讓與他人或授權他人利用時，因著作財產權之行使或利用而公開發表者。二、著作人將其尚未公開發表之美術著作或攝影著作之著作原件讓與他人，受讓人以其著作原件公開展示者。三、依學位授予法撰寫之碩士、博士論文，著作人已取得學位者。四、視聽著作之製作人依第三十八條規定利用該視聽著作而公開發表者。
 
-* 15 著作權之期間自著作完成之日起算。著作完成日期不詳者，依該著作最初發行之日起算。著作經增訂而新增部分性質上可以分割者，該部分視為新著作；其不能分割或係修訂者，視為原著作之一部。
+* 16 著作人於著作之原件或其重製物上或於著作公開發表時，有表示其本名、別名或不具名之權利。著作人就其著作所生之衍生著作，亦有相同之權利。利用著作之人，得使用自己之封面設計，並加冠設計人或主編之姓名或名稱。但著作人有特別表示或違反社會使用慣例者，不在此限。依著作利用之目的及方法，於著作人之利益無損害之虞，且不違反社會使用慣例者，得省略著作人之姓名或名稱。
 
-* 16 著作權之轉讓、繼承或設定質權，非經註冊，不得對抗第三人。
+* 17 著作人有保持其著作之內容、形式及名目同一性之權利。但有左列情形之一者，不適用之：一、依第四十七條規定為教育目的之利用，在必要範圍內所為之節錄、用字、用語之變更或其他非實質內容之改變。二、為使電腦程式著作，適用特定之電腦，或改正電腦程式設計明顯而無法達成原來著作目的之錯誤，所為必要之改變。三、建築物著作之增建、改建、修繕或改塑。四、其他依著作之性質、利用目的及方法所為必要而非實質內容之改變。
 
-* 17 外國人之著作合於左列各款之一者，得依本法申請著作權註冊：一、於中華民國境內首次發行者。二、依條約或其本國法令、慣例，中華民國人之著作得在該國享受同等權利者。前項註冊之著作權，著作權人享有本法所定之權利。但不包括專創性之音樂、科技或工程設計圖形或美術著作專集以外之翻譯。前項著作權人為未經認許成立之外國法人，對於第三十八條至第四十四條之罪得為告訴或提起自訴。但以依條約或其本國法令、慣例，中華民國人之著作得在該國享受同等權利者為限。
+* 18 著作人死亡或消滅者，關於其著作人格權之保護，視同生存或存續，任何人不得侵害。但依利用行為之性質及程度、社會之變動或其他情事可認為不違反該著作人之意思者，不構成侵害。
 
-* 18 演講、演奏、演藝或舞蹈，非經著作權人或著作有關之權利人同意，他人不得筆錄、錄音、錄影或攝影。但新聞報導或專供自己使用者，不在此限。
+* 19 共同著作之著作人格權，非經著作人全體同意，不得行使之。各著作人，無正當理由者，不得拒絕同意。共同著作之著作人，得於著作人中選定代表人行使著作人格權。對於前項代表人之代表權所加限制，不得對抗善意第三人。
 
-* 19 揭載於新聞紙、雜誌之著作，經註明不許轉載者，不得轉載或播送。未經註明不許轉載者，得由其他新聞紙、雜誌轉載或由廣播、電視臺播送。但應註明或播送其出處。如為具名之著作，並應註明或播送著作人姓名。前項著作，非著作權人不得另行編印單行版本。但經著作權人同意者，不在此限。
+* 20 未公開發表之著作原件及其著作財產權，除作為買賣之標的或經本人允諾者外，不得作為強制執行之標的。
 
-* 20 音樂著作，其著作權人自行或供人錄製商用視聽著作，自該視聽著作最初發行之日起滿二年者，他人得以書面載明使用方法及報酬請求使用其音樂著作，另行錄製。前項請求，著作權人應於一個月內表示同意或進行協議；逾期未予同意或協議不成立，當事人之一方得申請主管機關依規定報酬率裁決應給之報酬後，由請求人錄製。報酬率由主管機關定之。
+* 21 著作人格權專屬於著作人本身，不得讓與或繼承。
 
-* 21 音樂著作權人及利用音樂著作之人為保障並調和其權益，得依法共同成立法人團體，受主管機關監督與輔導，辦理音樂著作之錄製使用及使用報酬之收取與分配等有關事項。其監督與輔導辦法，由主管機關定之。
+* 22 著作人專有重製其著作之權利。
 
-* 22 未發行之著作原件及其著作權，除作為買賣之標的或經本人允諾者外，不得作為強制執行之標的。
+* 23 著作人專有公開口述其語文著作之權利。
 
-* 23 著作權有左列情形之一者，其期間視同屆滿：一、著作權人死亡無繼承人者。二、著作權人為法人或團體，於解散後，其著作權依法應歸屬於地方自治團體者。
+* 24 著作人專有公開播送其著作之權利。
 
-* 24 無著作權或著作權期間屆滿之著作，經製版人整理排印或就原件影印發行並依法註冊者，由製版人享有製版權十年。前項之著作為電影，經製版人申請目的事業主管機關發給准演執照並依法註冊者，由製版人享有製版權四年。製版權之轉讓、繼承或設定質權，準用本法關於著作權之有關規定。
+* 25 著作人專有公開上映其視聽著作之權利。
 
-* 25 受讓或繼承著作權者，不得將原著作改竄、割裂、變匿姓名或更換名目發行之。但經原著作人同意或本於其遺囑者，不在此限。
+* 26 著作人專有公開演出其語文、音樂或戲劇、舞蹈著作之權利。
 
-* 26 無著作權或著作權期間屆滿之著作，視為公共所有。但不問何人不得將其改竄、割裂、變匿姓名或更換名目發行之。
+* 27 著作人專有對其未發行之美術著作或攝影著作公開展示其著作原件之權利。
 
-* 27 著作不得冒用他人名義發行。
+* 28 著作人專有將其著作改作成衍生著作或編輯成編輯著作之權利。
 
-* 28 左列各款情形，除本法另有規定外，未經著作權人同意或授權者，視為侵害著作權：一、用原著作名稱繼續著作者。二、選輯他人著作或錄原著作加以評註、索引、增補或附錄者。三、就他人著作之練習問題發行解答書者。四、重製他人之著作者。五、公開口述、公開播送、公開上映、公開演奏、公開展示或出租他人之著作者。六、用文字、圖解、圖畫、錄音、錄影、攝影或其他方法改作他人之著作者。七、就他人平面或立體圖形仿製、重製為立體或平面著作者。八、出版人出版著作權人之著作，未依約定辦理致損害著作權人之利益者。前項第三款所稱他人著作為教育部審定之教科書者，並應得教育部之許可。已取得合法著作複製物之所有權者，得出借、出租或出售該複製物。
+* 29 著作人專有出租其著作之權利。
 
-> 釋：為配合本法第三條「公開上映權」之修正、公開口述、公開播送、公開上映、公開演奏、公開展示或出租他人著作之侵害行為，應以為營利之目的為限，例如ＭＴＶ視聽中心或百貨公司電視牆播映錄影著作以收取報酬或招徠消費者以增加營收等；對於非為營利之目的，例如為教育、學術或慈善之目的而公開口述、公開播送、公開上映、公開演奏、公開展示或出租他人著作之行為，應有予以排除之必要，俾符合著作權法第一條所定保障著作人著作權益、調和社會公共利益及促進國家文化發展之立法目的，爰加以修正之。
+* 30 著作財產權，除本法另有規定外，存續於著作人生存期間及其死亡後五十年。著作於著作人死亡後四十年至五十年間首次公開發表者，著作財產權之期間，自公開發表時起存續十年。
 
-* 29 左列各款情形，經註明原著作出處者，不以侵害他人著作權論：一、節選他人著作，以編輯教育部審定之教科書者。二、以節錄方式引用他人著作，供自己著作之參證註釋者。三、為學術研究複製他人著作，專供自己使用者。電腦程式合法持有人為配合其所使用機器之需要而修改其程式，或因備用存檔需要而複製其程式，不以侵害他人著作權論。但經修改或複製之程式，限於該持有人自行使用。
+* 31 共同著作之著作財產權，存續至最後死亡之著作人死亡後五十年。
 
-* 30 已發行之著作，得為盲人以點字重製之。經政府許可以增進盲人福利為目的之機構，得錄音已發行之著作專供盲人使用。
+* 32 別名著作或不具名著作之著作財產權，存續至著作公開發表後五十年。但可證明其著作人死亡已逾五十年者，其著作財產權消滅。有左列情形之一者，不適用前項規定：一、著作人之別名為眾所周知者。二、於前項期間內，依第七十四條規定為著作人本名之登記者。
 
-* 31 政府辦理之各種考試、公立或經立案之私立學校入學考試，得重製或節錄已發行之著作，供為試題之用。
+* 33 法人為著作人之著作，其著作財產權存續至其著作公開發表後五十年。但著作在創作完成時起算十年內未公開發表者，其著作財產權存續至創作完成時起五十年。
 
-* 32 供公眾使用之圖書館、博物館、歷史館、科學館、藝術館，於左列各款情形之一，得就其收藏之著作重製之：一、應閱覽人之要求，供個人之研究，影印已發行著作之一部分或揭載於期刊之整篇著作。但每人以一份為限。二、基於保存資料之必要。三、應同性質機構之要求。前項第二款、第三款之重製，以該著作絕版或無法購得者為限。
+* 34 攝影、視聽、錄音及電腦程式著作之著作財產權存續至著作公開發表後五十年。前條但書規定，於前項準用之。
 
-* 33 著作權人對於侵害其著作權者，除依本法請求處罰外，並得請求排除其侵害；其受有損害時，並得請求賠償；有侵害之虞者，並得請求防止之。數人共同不法侵害著作權者，連帶負損害賠償責任。前項損害賠償額，除得依侵害人所得利益與被害人所受損失推定外，不得低於各該被侵害著作實際零售價格之五百倍，無零售價格者，由法院依侵害情節酌情定其賠償額。侵害他人著作權，被害人得於法院判決確定後，將判決書一部或全部登報公告，其費用由侵害人負擔。
+* 35 第三十條至第三十四條所定存續期間，以該期間屆滿當年之末日為期間之終止。繼續或逐次公開發表之著作，依公開發表日計算著作財產權存續期間時，如各次公開發表能獨立成一著作者，著作財產權存續期間自各別公開發表日起算。如各次公開發表不能獨立成一著作者，以能獨立成一著作時之公開發表日起算。前項情形，如繼續部分未於前次公開發表日後三年內公開發表者，其著作財產權存續期間自前次公開發表日起算。
 
-* 34 著作權之共有人於著作權受侵害時，得不俟其他共有人之同意提起訴訟，請求賠償其所受之損害。
+* 36 著作財產權得全部或部分讓與他人或與他人共有。著作財產權讓與之範圍依當事人之約定；其約定不明之部分，推定為未讓與。各類著作財產權之讓與價格及使用報酬，不得低於主管機關公告之標準。主管機關每年應依國民所得額之成長幅度適時調整。
 
-* 35 省（市）、縣（市）政府或司法警察官、司法警察對侵害他人業經著作權註冊之著作，經告訴、告發者，得扣押其侵害物，依法移送偵辦。
+* 37 著作財產權人得授權他人利用其著作，其授權利用之地域、時間、內容、利用方法或其他事項，依當事人之約定；其約定不明之部分，推定為未授權。前項被授權人非經著作財產權人同意，不得將其被授與之權利再授權第三人利用。
 
-* 36 以發售為目的輸入或輸出侵害他人業經著作權註冊之著作，應予禁止；必要時得沒入其侵害物。
+* 38 視聽著作之製作人所為之重製、公開播送、公開上映、附加字幕或變換配音，得不經著作人之同意。但契約另有約定者，從其約定。
 
-* 37 著作權或製版權註冊之申請有虛偽情事者，應不予註冊；於註冊後始發現者，應撤銷其註冊。
+* 39 以著作財產權為質權之標的物者，除設定時另有約定外，著作財產權人得行使其著作財產權。
 
-* 38 擅自重製他人之著作者，處六月以上三年以下有期徒刑，得併科三萬元以下罰金；其代為重製者亦同。銷售、出租或意圖銷售、出租而陳列、持有前項著作者，處二年以下有期徒刑，得併科二萬元以下罰金。意圖營利而交付前項著作者亦同。
+* 40 共同著作之著作財產權，非經著作人全體同意，不得行使之；各著作人非經其他共同著作人之同意，不得以其應有部分讓與他人或為他人設定質權。各著作人，無正當理由者，不得拒絕同意。共同著作各著作人之應有部分，依共同著作人間之約定定之；無約定者，依各著作人參與創作之程度定之。各著作人參與創作之程度不明時，推定為均等。共同著作之著作人拋棄其應有部分者，其應有部分由其他共同著作人依其應有部分之比例分享之。前項規定，於共同著作之著作人死亡無繼承人或消滅後無承受人者，準用之。共同著作之著作人，得於著作人中選定代表人行使著作財產權。對於代表人之代表權所加限制，不得對抗善意第三人。前五項之規定，於因其他關係成立之共有著作財產權，準用之。
 
-* 39 仿製他人著作或以仿製以外之方法侵害他人之著作權者，處二年以下有期徒刑，得併科二萬元以下罰金。代為製作者亦同。銷售、出租或意圖銷售、出租而陳列、持有前項著作者，處一年以下有期徒刑，得併科一萬元以下罰金。意圖營利而交付前項著作者亦同。
+* 41 著作人投稿於新聞紙、雜誌或授權公開播送其著作者，除另有約定外，推定著作人僅授與刊載或公開播送一次之權利，對著作人之其他權利不生影響。
 
-> 釋：因現行條文第一項規定文字未盡妥適，致司法機關實務上認為必須限於仿製或其他類似仿製之侵害行為，始足當之，則第二十八條所定之各種侵害行為，除重製、仿製或類似仿製之其他方法侵害著作權時，可依本法第二十八條及本條處罰外，其餘侵害行為均無法予以處罰，為貫徹保障著作權人權利，爰予修正，以資明確。
+* 42 著作財產權因存續期間屆滿而消滅。於存續期間內，有左列情形之一者，亦同：一、著作財產權人死亡，其著作財產權依法應歸屬國庫者。二、著作財產權人為法人，於其消滅後，其著作財產權依法應歸屬於地方自治團體者。
 
-* 40 以犯前二條之罪之一為常業者，處六月以上五年以下有期徒刑，得併科五萬元以下罰金。
+* 43 著作財產權消滅之著作，除本法另有規定外，任何人均得自由利用。
 
-* 41 違反第十三條第二項、第十八條或第十九條之規定者，科一萬元以下罰金。
+* 44 立法或行政機關，因立法或行政目的所需，認有必要將他人著作列為內部參考資料時，在合理範圍內，得重製他人之著作。但依該著作之種類、用途及其重製物之數量、方法，有害於著作財產權人之利益或係電腦程式著作者，不在此限。
 
-* 42 擅自複製業經製版權註冊之製版者，處一年以下有期徒刑，得併科一萬元以下罰金。
+* 45 專為司法程序使用之必要，在合理範圍內，得重製他人之著作。前條但書規定，於前項情形準用之。
 
-* 43 違反第二十五條或第二十七條之規定者，處六月以下有期徒刑，得併科五千元以下罰金。
+* 46 依法設立之各級學校及其擔任教學之人，為學校授課需要，在合理範圍內，得重製他人已公開發表之著作。第四十四條但書規定，於前項情形準用之。
 
-* 44 違反第二十六條之規定者，處一年以下有期徒刑，得併科一萬元以下罰金。
+* 47 依法設立之各級學校或教育機構及其擔任教學之人，為教育目的之必要，在合理範圍內，得公開播送他人已公開發表之著作，或將其揭載於教育行政機關審定之教科書或教師手冊中。但依著作之種類、用途及其公開播送或揭載之方法，有害於著作財產權人之利益者，不在此限。
 
-* 45 未經註冊之著作或製版物刊有業經註冊或其他同義字樣者，除由主管機關禁止銷售外，科八千元以下罰金。
+* 48 供公眾使用之圖書館、博物館、歷史館、科學館、藝術館或其他文教機構，於左列情形之一，得就其收藏之著作重製之：一、應閱覽人供個人研究之要求，重製已公開發表著作之一部分或期刊中之單篇著作，每人以一份為限。二、基於保存資料之必要者。三、就絕版或難以購得之著作，應同性質機構之要求者。
 
-* 46 依第三十八條至第四十四條處罰者，其重製物、仿製物、複製物、供犯罪所用之機具、製版、底片、模型等沒收之。
+* 49 以廣播、攝影、錄影、新聞紙或其他方法為時事報導者，在報導之必要範圍內，得利用其報導過程中所接觸之著作。
 
-* 47 第三十八條至第四十三條之罪，須告訴乃論。但犯第四十三條之罪而著作人或被冒用人死亡者，不在此限。
-
-* 48 法人之代表人、法人或自然人之代理人、受雇人或其他從業人員，因執行業務，犯第三十八條至第四十五條之罪者，除依各該條規定處罰其行為人外，對該法人或自然人亦科以各該條之罰金刑。
-
-* 49 依本法申請註冊，應繳納規費，其金額由主管機關定之。
-
-* 50 著作權之爭議，得由當事人申請主管機關調解之。其爭議調解辦法，由主管機關定之。
+* 50 以中央或地方機關或公法人名義公開發表之著作，得由新聞紙、雜誌轉載，或由廣播電臺或電視電臺公開播送。
 
 * 50.1 著作已完成註冊於中華民國七十四年七月十日本法修正施行前，其著作權期間仍在存續中者，依本法所定期間計算其著作權期間。完成於中華民國七十四年七月十日本法修正施行前未經註冊取得著作權之著作，其發行未滿二十年者，於中華民國七十四年七月十日本法修正施行後適用本法之規定。但侵害行為之賠償及處罰，須該行為發生於本法修正施行後，始適用本法。中華民國七十四年七月十日本法修正增訂之著作，依中華民國七十四年七月十日本法修正所定期間，其著作權仍在存續中者，適用本法規定。但侵害行為之賠償及處罰，須該行為發生於本法增訂該著作後，始適用本法。
 
 > 釋：一、七十四年新法修正施行後，對於依舊法著作權期間係終身加三十年之著作固不生影響，惟對依舊法著作權期間係三十年、二十年或十年之著作，其權利期間究應如何計算，有予明確規定之必要，故訂立第一項。二、為銜接五十三年舊著作權法之適用，本條第二項規定完成於五十三年舊法時期未經註冊取得著作權之著作，其發行未滿二十年者，於本法修正施行後，適用本法規定。以貫徹七十四年著作權法修正改採創作保護主義加強保護著作人著作權益之精神，並調和與五十三年採註冊保護主義之舊法間之基本歧異。三、隨科技發展，各有不同類別著作產生，對於完成於舊法時期而為新法所增訂之著作，有無權利，有予明確規定之必要，爰於第三項規定之。
 
-* 51 本法施行細則，由內政部定之。
+* 51 供個人或家庭為非營利之目的，在合理範圍內，得利用圖書館及非供公眾使用之機器重製已公開發表之著作。
 
-* 52 本法自公布日施行。
+* 52 為報導、評論、教學、研究或其他正當目的之必要，在合理範圍內，得引用已公開發表之著作。
+
+* 53 已公開發表之著作，得為盲人以點字重製之。經政府許可以增進盲人福利為目的之機構，得錄音已公開發表之著作專供盲人使用。
+
+* 54 政府、依法設立之各級學校或教育機構辦理之各種考試，得重製已公開發表之著作，供為試題之用。但已公開發表之著作如為試題者，不適用之。
+
+* 55 非以營利為目的，未對觀眾或聽眾直接或間接收取任何費用，且未對表演人支付報酬者，得於公益性之活動中公開口述、公開播送、公開上映或公開演出他人已公開發表之著作。前項情形，利用人應支付使用報酬。使用報酬率，由主管機關定之。
+
+* 56 廣播電臺或電視電臺，為播送之目的，得以自己之設備錄音或錄影該著作。但以其播送業經著作財產權人之授權或合於本法規定者為限。前項錄製物之使用次數及保存期間，依當事人之約定。
+
+* 57 美術著作或攝影著作之原件所有人或經其同意之人，得公開展示其原件。前項公開展示之人，為向參觀人解說其著作，得於說明書內重製其著作。
+
+* 58 於街道、公園、建築物之外壁或其他向公眾開放之戶外場所長期展示之美術著作或建築著作，除左列情形外，得以任何方法利用之：一、以建築方式重製建築物。二、以雕塑方式重製雕塑物。三、為於本條規定之場所長期展示目的所為之重製。四、以販賣重製物為目的所為之重製。
+
+* 59 合法電腦程式著作重製物之所有人得因配合其所使用機器之需要，修改其程式，或因備用存檔之需要重製其程式。但限於該所有人自行使用。前項所有人因滅失以外之事由，喪失原重製物之所有權者，除經著作財產權人同意外，應將其修改或重製之程式銷燬之。
+
+* 60 合法著作重製物之所有人，得出租該重製物。但錄音及電腦程式著作之重製物，不適用之。
+
+* 61 揭載於新聞紙、雜誌有關政治、經濟或社會上時事問題之論述，得由其他新聞紙、雜誌轉載或由廣播電臺或電視電臺公開播送。但經註明不許轉載或公開播送者，不在此限。
+
+* 62 政治或宗教上之公開演說、裁判程序及中央或地方機關之公開陳述，任何人得利用之。但專就特定人之演說或陳述，編輯成編輯著作者，應經著作財產權人之同意。
+
+* 63 依第四十四條至第四十七條、第四十八條第一款、第四十九條至第五十五條、第六十一條及第六十二條規定利用他人著作者，得翻譯該著作。
+
+* 64 依第四十四條至第四十七條、第四十九條、第五十條、第五十二條、第五十三條、第五十五條、第五十七條、第五十八條、第六十條至第六十二條規定利用他人著作者，應明示其出處。前項明示出處，就著作人之姓名或名稱，除不具名著作或著作人不明者外，應以合理之方式為之。
+
+* 65 著作之利用是否合於第四十四條至第六十三條規定，應審酌一切情狀，尤應注意左列事項，以為判斷之標準：一、利用之目的及性質，包括係為商業目的或非營利教育目的。二、著作之性質。三、所利用之質量及其在整個著作所占之比例。四、利用結果對著作潛在市場與現在價值之影響。
+
+* 66 第四十四條至第六十三條規定，對著作人之著作人格權不生影響。
+
+* 67 著作首次發行滿一年，在大陸地區以外任何地區無中文翻譯本發行或其發行中文翻譯本已絕版者，欲翻譯之人，為教學、研究或調查之目的，有左列情形之一者，經申請主管機關許可強制授權，並給付使用報酬後，得翻譯並以印刷或類似之重製方式發行之：一、已盡相當努力，無法聯絡著作財產權人致不能取得授權者。二、曾要求著作財產權人授權而無法達成協議者。前項申請，主管機關應於提出申請九個月後始予許可；於九個月期間內，著作財產權人或其授權之人以通常合理價格發行中文翻譯本或原著作人將其著作重製物自流通中全部收回者，主管機關應不許可。
+
+* 68 廣播電臺或電視電臺為專門使用於教育之目的或對特定行業專家傳播技術或科學研究之結果者，就其依前條規定所為之翻譯，得以錄音、錄影之方式公開播送並得授權其他廣播電臺或電視電臺以同一目的公開播送之。前項翻譯，不得以營利為目的而使用之。廣播電臺或電視電臺就為教育活動所發行之視聽著作內容予以翻譯者，準用前二項規定。
+
+* 69 錄有音樂著作之銷售用錄音著作公開發行滿二年，欲利用該音樂著作錄製其他銷售用錄音著作之人，有第六十七條第一項各款規定情形之一者，經申請主管機關許可強制授權，並給付使用報酬後，得利用該音樂著作，另行錄製。
+
+* 70 依前三條規定利用著作者，不得將其翻譯物或錄音著作之重製物銷售至中華民國管轄區域外。
+
+* 71 依第六十七條或第六十九條規定，取得強制授權之許可後，有左列情形之一者，主管機關應撤銷其許可：一、未依主管機關許可之方式利用著作者。二、強制授權許可後，發現其申請有虛偽情事者。
+
+* 72 依第六十七條規定，取得強制授權之許可後，有左列情形之一者，主管機關應終止其許可：一、原著作著作財產權人或其授權之人，於中華民國管轄區域內，以通常合理之價格發行中文翻譯本且其內容與依強制授權許可發行之中文翻譯本內容大體相同。二、原著作人將其著作重製物自流通中全部收回。前項強制授權許可終止前，申請人已完成之重製物，得繼續銷售。
+
+* 73 第六十七條及第六十九條規定之申請許可強制授權之辦法，由主管機關定之。
+
+* 74 著作人或第八十六條規定之人，得向主管機關申請著作人登記。著作財產權人，得向主管機關申請登記其著作財產權、著作之首次公開發表日或首次發行日。
+
+* 75 有左列情形之一者，非經登記，不得對抗第三人：一、著作財產權之讓與、專屬授權或處分之限制。二、以著作財產權為標的物之質權之設定、讓與、變更、消滅或處分之限制。但因混同、著作財產權或擔保債權之消滅而質權消滅者，不在此限。
+
+* 76 主管機關應備置登記簿，記載前二條所為之登記事項，並刊登政府公報公告之。前項登記簿，任何人均得申請查閱或請求發給謄本。
+
+* 77 有左列情形之一者，主管機關不受理登記：一、申請登記之標的不屬本法規定之著作者。二、依第七十四條第二項規定申請登記著作財產權，而其著作財產權已消滅者。三、著作依法應受審查，而未經該管機關審查核准者。四、著作經依法禁止出售或散布者。五、申請登記之事項虛偽者。
+
+* 78 有左列情形之一者，主管機關應撤銷其登記：一、登記後發現有前條各款情形之一者。二、原申請人申請撤銷者。
+
+* 79 無著作財產權或著作財產權消滅之中華民國人之文字著述或美術著作，經製版人就文字著述整理排印，或就美術著作原件影印首次發行，並依法登記者，製版人就其排印或影印之版面，專有以印刷或類似方式重製之權利。製版人之權利，自製版完成時起算存續十年。前項保護期間，以該期間屆滿當年之末日，為期間之終止。
+
+* 80 第四十二條及第四十三條有關著作財產權消滅之規定、第四十四條至第四十九條、第五十一條、第五十二條、第五十四條、第六十四條及第六十五條關於著作財產權限制之規定及第七十五條至第七十八條關於著作財產權登記之規定，於製版權準用之。
+
+* 81 著作財產權人為行使權利、收受及分配使用報酬，經主管機關之許可，得組成著作權仲介團體。前項團體之許可設立、組織、職權及其監督、輔導，另以法律定之。
+
+* 82 主管機關應設置著作權審議及調解委員會，辦理左列事項：一、第三十六條第三項、第五十五條第二項、第六十七條及第六十九條規定之最低讓與價格或使用報酬之審議。二、著作權仲介團體與利用人間，對使用報酬爭議之調解。三、著作權或製版權爭議之調解。四、其他有關著作權審議及調解之諮詢。前項第三款所定爭議之調解，其涉及刑事者，以告訴乃論之案件為限。
+
+* 83 前條著作權審議及調解委員會之組織規程及有關爭議之調解辦法，由主管機關擬訂，報請行政院核定後發布之。
+
+* 84 著作權或製版權之權利人對於侵害其權利者，得請求排除之，有侵害之虞者，得請求防止之。著作權或製版權之權利人，為前項請求時，對於侵害行為作成之物或專供侵害所用之物，得請求銷燬或為其他必要之處置。
+
+* 85 侵害著作人格權者，負損害賠償責任。雖非財產上之損害，被害人亦得請求賠償相當之金額。前項侵害，被害人並得請求表示著作人之姓名或名稱、更正內容或為其他回復名譽之適當處分。
+
+* 86 著作人死亡後，除其遺囑另有指定外，左列之人，依順序對於違反第十八條或有違反之虞者，得依第八十四條及前條第二項規定，請求救濟：一、配偶。二、子女。三、父母。四、孫子女。五、兄弟姊妹。六、祖父母。
+
+* 87 有左列情形之一者，視為侵害著作權或製版權：一、以侵害著作人名譽之方法利用其著作者。二、明知為侵害著作權或製版權之物而散布或意圖散布而陳列或持有或意圖營利而交付者。三、意圖在中華民國管轄區域內散布而輸入在該區域內重製係屬侵害著作權或製版權之物者。四、明知係侵害電腦程式著作財產權之重製物而仍作為直接營利之使用者。
+
+* 88 因故意或過失不法侵害他人之著作財產權或製版權者，負損害賠償責任。數人共同不法侵害者，連帶負賠償責任。前項損害賠償，被害人得依左列規定擇一請求：一、依民法第二百十六條規定請求。但被害人不能證明其損害時，得以其行使權利依通常情形可得預期之利益，減除被侵害後行使同一權利所得利益之差額，為其所受損害。二、請求侵害人因侵害行為所得之利益。但侵害人不能證明其成本或必要費用時，以其侵害行為所得之全部收入，為其所得利益。依前項規定，如被害人不易證明其實際損害額，得請求法院依侵害情節，在新臺幣一萬元以上五十萬元以下酌定賠償額。如損害行為屬故意且情節重大者，賠償額得增至新臺幣一百萬元。
+
+* 89 被害人得請求由侵害人負擔費用，將判決書內容全部或一部登載新聞紙、雜誌。
+
+* 90 共同著作之各著作權人，對於侵害其著作權者，得各依本章之規定，請求救濟，並得按其應有部分，請求損害賠償。前項規定，於因其他關係成立之共有著作財產權或製版權之共有人，準用之。
+
+* 91 擅自重製他人之著作者，處六月以上三年以下有期徒刑，得併科新臺幣二十萬元以下罰金；其代為重製者亦同。意圖銷售或出租而擅自重製他人著作者，處六月以上五年以下有期徒刑，得併科新臺幣三十萬元以下罰金。
+
+* 92 擅自以公開口述、公開播送、公開上映、公開演出、公開展示、改作、出租或其他方法侵害他人之著作財產權者，處三年以下有期徒刑，得併科新臺幣十五萬元以下罰金。
+
+* 93 有左列情形之一者，處二年以下有期徒刑，得併科新臺幣十萬元以下罰金：一、侵害第十五條至第十七條規定之著作人格權者。二、違反第七十條規定者。三、以第八十七條各款方法之一侵害他人之著作權者。
+
+* 94 以犯第九十一條、第九十二條或第九十三條之罪為常業者，處一年以上七年以下有期徒刑，得併科新臺幣四十五萬元以下罰金。
+
+* 95 有左列情形之一者，處一年以下有期徒刑，得併科新臺幣五萬元以下罰金：一、違反第十八條規定者。二、侵害第七十九條規定之製版權者。三、以第八十七條各款方法之一侵害他人製版權者。
+
+* 96 違反第五十九條第二項或第六十四條規定者，科新臺幣五萬元以下罰金。
+
+* 97 未經登記之製版物，刊有業經登記或其他同義字樣者，科新臺幣三萬元以下罰金。
+
+* 98 犯第九十一條至第九十五條之罪，供犯罪所用或因犯罪所得之物，沒收之。
+
+* 99 犯第九十一條至第九十五條之罪者，因被害人或其他有告訴權人之聲請，得令將判決書全部或一部登報，其費用由被告負擔。
+
+* 100 本章之罪，須告訴乃論。但第九十四條、第九十五條第一款及第九十七條之罪，不在此限。
+
+* 101 法人之代表人、法人或自然人之代理人、受雇人或其他從業人員，因執行業務，犯第九十一條至第九十七條之罪者，除依各該條規定處罰其行為人外，對該法人或自然人亦科各該條之罰金。對前項行為人、法人或自然人之一方告訴或撤回告訴者，其效力及於他方。
+
+* 102 未經認許之外國法人，對於第九十一條至第九十六條之罪，得為告訴或提起自訴。
+
+* 103 司法警察官或司法警察對侵害他人之著作權或製版權，經告訴、告發者，得依法扣押其侵害物，並移送偵辦。
+
+* 104 著作權或製版權之權利人對輸入或輸出侵害其著作權或製版權之物者，得提供相當於海關核估該進口貨物完稅價格或出口貨物離岸價格之保證金，作為被查扣人因查扣所受損害之賠償擔保，申請海關先予查扣。前項查扣之物，經申請人取得法院確定判決，屬侵害著作權或製版權者，由海關予以沒入。有左列情形之一者，除由海關撤銷查扣外，申請人並應賠償被查扣人因查扣所受之損害：一、查扣之物經法院確定判決，不屬侵害著作權或製版權之物者。二、申請人於海關受理查扣之日起七日內未起訴者。三、申請人於海關受理查扣後申請撤銷查扣者。有左列情形之一者，海關應依申請人之申請返還保證金：一、提供保證金之原因消滅者。二、撤銷查扣後，申請人證明已定二十日以上之期間，催告被查扣人行使權利而未行使者。三、被查扣人同意返還者。被查扣人就第一項之保證金，與質權人有同一之權利。
+
+* 105 依本法申請著作權或製版權登記者，應繳納申請費、登記費及公告費。依本法申請強制授權、調解、查閱登記簿或請求發給謄本者，應繳納申請費。前二項收費標準，由主管機關定之。
+
+* 106 著作合於本法修正施行前第五十條之一規定，於本法修正施行後，依修正施行前之本法，其著作權期間仍在存續中者，除本章另有規定外，適用本法規定。
+
+* 107 著作於中華民國七十四年七月十日本法修正施行後完成者，除本章另有規定外，適用本法規定。
+
+* 108 外國人之著作，合於本法修正施行前第十七條第一項第一款或第二款之規定而未經註冊取得著作權，有左列情形之一者，除本章另有規定外，適用本法規定：一、於中華民國七十四年七月十日本法修正施行前發行未滿二十年，依修正施行前之本法，著作權期間仍在存續中者。二、中華民國七十四年七月十日本法增訂之著作，於中華民國七十四年七月十日本法修正施行前完成，依修正施行前之本法，著作權期間仍在存續中者。三、於中華民國七十四年七月十日本法修正施行後完成者。
+
+* 109 本法增訂之著作，於本法修正施行前完成者，除本章另有規定外，適用本法規定。
+
+* 110 第十條及第十四條規定，於本法修正施行前已完成註冊之著作，不適用之。
+
+* 111 第十一條及第十二條規定，對於依修正施行前本法第十條及第十一條規定取得著作權者，不適用之。
+
+* 112 本法修正施行前，翻譯受修正施行前本法保護之外國人著作，如未經其著作權人同意者，於本法修正施行後，除合於第四十四條至第六十五條規定者外，不得再重製。前項翻譯之重製物，本法修正施行滿二年後，不得再行銷售。
+
+* 113 依本法修正施行前第二十四條第一項規定享有之製版權，於本法修正施行後製版權未消滅者，適用第四章規定。
+
+* 114 本法修正施行前所為之著作權及製版權侵害之認定及救濟，適用行為時之規定。
+
+* 115 本國與外國之團體或機構互訂保護著作權之協議，經行政院核准者，視為第四條所稱協定。
+
+* 116 本法施行細則，由主管機關定之。
+
+* 117 本法自公布日施行。
 
