公職人員選舉罷免法 1992.10.22

--- a/行政-內政/公職人員選舉罷免法.md
+++ b/行政-內政/公職人員選舉罷免法.md
@@ -92,9 +92,9 @@
 
 * 30 選舉人名冊經公開陳列、公告閱讀期滿後，村、里長應即將原冊暨申請更正情形，報由鄉（鎮、市、區）公所轉送戶籍機關查核更正。選舉人名冊經公告更正後即為確定，並由各直轄市、縣（市）選舉委員會公告選舉人人數。
 
-* 31 選舉人年滿二十三歲，得於其行使選舉權之選舉區或其本籍地登記為公職人員候選人。但縣（市）長候選人須年滿三十歲；鄉（鎮、市）長候選人須年滿二十六歲。前項本籍，不適用於鄉（鎮、市）民代表、鄉（鎮、市）長、村、里長之選舉。有選舉權人年滿三十五歲，在各該省（市）行政區域內繼續居住六個月以上者，得於該省（市）或其本籍地，登記為監察委員候選人。選舉人年滿二十三歲，得由依法設立之政黨登記為中央公職人員全國不分區選舉之候選人。但監察委員候選人須年滿三十五歲。僑居國外之中華民國國民年滿二十三歲，在國外繼續僑居八年以上，得由依法設立之政黨登記為中央公職人員僑居國外國民選舉之候選人。但監察委員候選人須年滿三十五歲。政黨登記之全國不分區、僑居國外國民選舉候選人，應為該黨黨員，並經各該候選人書面同意；其候選人名單應以書面為之，並排列次序。回復中華民國國籍三年或因歸化取得中華民國國籍滿十年者，得依第一項、第三項至第六項規定登記為候選人。選舉人在本籍地登記為候選人者，應於本籍地行使選舉投票權。
+* 31 選舉人年滿二十三歲，得於其行使選舉權之選舉區或其本籍地登記為公職人員候選人。但縣（市）長候選人須年滿三十歲；鄉（鎮、市）長候選人須年滿二十六歲。前項本籍，不適用於鄉（鎮、市）民代表、鄉（鎮、市）長、村、里長之選舉。有選舉權人年滿三十五歲，在各該省（市）行政區域內繼續居住六個月以上者，得於該省（市）或其本籍地，登記為監察委員候選人。選舉人年滿二十三歲，得由依法設立之政黨登記為中央公職人員全國不分區選舉之候選人。但監察委員候選人須年滿三十五歲。僑居國外之中華民國國民年滿二十三歲，在國外繼續僑居八年以上，得由依法設立之政黨登記為中央公職人員僑居國外國民選舉之候選人。但監察委員候選人須年滿三十五歲。政黨登記之全國不分區、僑居國外國民選舉候選人，應為該黨黨員，並經各該候選人書面同意；其候選人名單應以書面為之，並排列次序。回復中華民國國籍滿三年或因歸化取得中華民國國籍滿十年者，得依第一項、第三項至第六項規定登記為候選人。具有第五項資格之僑居國外國民，因擔任公職，或回國投資，於執行職務期間，在國內設籍者，亦得登記為候選人。選舉人在本籍地登記為候選人者，應於本籍地行使選舉投票權。
 
-> 釋：一、第一項規定選舉人，符合候選人年齡規定，得於其行使選舉權之選舉區或其本籍地登記為候選人，使選舉人得返回本籍地參選，服務鄉梓。二、參考現行選舉罷免法第十五條第二項之規定，增訂第二項，明定本籍之規定，不適用於鄉（鎮、市、區）以下之基層地方公職人員選舉。三、原第二項移列為第三項並酌作文字修正。四、增列第四項、明定全國不分區選舉候選人之條件，並規定由政黨提出登記，俾配合憲法增修條文規定與建立政黨政治制度運作。五、增列第五項，明定僑居國外國民選舉候選人之條件，並規定由政黨提出登記，以保障華僑參政權並符憲法增修條文之規定。六、增列第六項，明定政黨申請登記之候選人應為該黨黨員，並經候選人書面同意，以促進政黨政治之發展。七、原第三項移列第七項，並將「前二項」修正為「第一項、第三項至第六項」。八、明定選舉人對本籍地登記為候選人時，於本籍地行使選舉投票權，爰增列第八項。
+> 釋：因第五項「僑居」一詞不易界定，為保障僑居國外國民之參政權，爰增列第八項「具有第五項資格之僑居國外國民，因擔任公職，或回國投資，於執行職務期間，在國內設籍者，亦得登記為候選人」之規定。
 
 * 32 登記為候選人，應具備左列之學、經歷：一、國民大會代表、立法委員候選人須高級中等以上學校畢業，或普通考試以上考試及格，或曾任省（市）議員以上公職一任以上。二、監察委員候選人須專科以上學校畢業或高等考試以上考試及格，具有行政、司法工作經驗四年以上；或曾在專科以上學校任教或執行律師、會計師業務四年以上；或曾任省（市）議員以上公職一任以上。三、省（市）議員候選人須高級中等以上學校畢業，或普通考試以上考試及格，或曾任縣（市）議員以上公職一任以上。四、縣（市）議員候選人須國民中學以上學校畢業，或丁等特種考試以上考試及格，或曾任鄉（鎮、市）民代表以上公職一任以上。五、鄉（鎮、市）民代表候選人須國民中學以上學校畢業，或丁等特種考試以上考試及格，或曾任鄉（鎮、市）民代表以上公職、村、里長一任以上。六、縣（市）長候選人須專科以上學校畢業或高等考試以上考試及格，並具有行政工作經驗四年以上；或曾在專科以上學校擔任講師以上教職四年以上；或執行經高等考試及格之專門職業四年以上；或高級中等以上學校畢業或普通考試以上考試及格，並曾任縣（市）議員以上公職一任以上或鄉（鎮、市）長以上公職一任以上。七、鄉（鎮、市）長候選人須國民中學以上學校畢業或普通考試以上考試及格，並具有行政工作經驗四年以上或曾任鄉（鎮、市）民代表以上公職一任以上。八、村、里長候選人須國民小學以上學校畢業，或丁等特種考試以上考試及格，或曾任鄉（鎮、市）民代表、村、里長以上公職一任以上。前項各款學、經歷之認定，以檢覈行之。公職候選人檢覈規則，由考試院定之。本法施行前，經公職候選人資格檢覈合格者，得不再經檢覈，取得各該公職候選人資格。曾經第一項第一款之一種中央公職人員候選人資格檢覈合格者，取得同款他種中央公職人員及第三款至第五款之公職候選人資格；曾經第二款公職候選人資格檢覈合格者，取得第一款及第三款至第五款之公職候選人資格；曾經第三款公職候選人資格檢覈合格者，取得第四款、第五款公職候選人資格；曾經第四款公職候選人資格檢覈合格者，取得第五款公職候選人資格；曾經第六款公職候選人資格檢覈合格者，取得第七款、第八款公職候選人資格；曾經第七款公職候選人資格檢覈合格者，取得第八款公職候選人資格。
 
