刑事訴訟法 1993.7.9

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -130,7 +130,9 @@
 
 * 60 公示送達應由書記官分別經法院或檢察長、首席檢察官或檢察官之許可，除將應送達之文書或其節本，張貼於法院牌示處外，並應以其繕本登載報紙，或以其他適當方法通知或公告之。前項送達，自最後登載報紙或通知公告之日起，經三十日發生效力。
 
-* 61 送達文書由司法警察行之。前項文書為判決、裁定或不起訴處分書者，送達人應作收受證書，記載送達證書所列事項，並簽名交收領人。
+* 61 送達文書由司法警察或郵政機關行之。前項文書為判決、裁定、起訴書或不起訴處分書者，送達人應作收受證書，記載送達證書所列事項，並簽名交收領人。
+
+> 釋：為使刑事訴訟程序進行較為順暢，並避免刑事訴訟文書送達遲延，爰於第一項中「司法警察」下增訂「或郵政機關」五字，俾法院或檢察機關亦得以選擇較為便利之郵務送達方式。則警察機關業務亦可減輕，使其得以專心偵辦刑案，以維護社會治安。
 
 * 62 送達文書，除本章有特別規定外，準用民事訴訟法之規定。
 
